<resources>
    <string name="app_name">MyStyleBox</string>
    <string name="selectionclothes"> Выберите вещи</string>
    <string name="selectionoutfit"> Выберите \n комплекты</string>
    <string name="clothesname"> Добавление вещи </string>
    <string name="wishlistsname"> Добавление вещи в список желаний</string>
    <string name="outfitname"> Добавление комплекта </string>
    <string name="addtag"> Добавить новый тег </string>
    <string name="name"> Название </string>
    <string name="cancel"> Отмена </string>
    <string name="things"> Вещи </string>
    <string name="weather"> Температура </string>
    <string name="temperature"> Температура </string>
    <string name="itemsincluded"> Вещи в комлекте</string>
    <string name="outfitincluded"> 1 комплект с вещью</string>
    <string name="category"> Категория </string>
    <string name="count"> Стоимость </string>
    <string name="brend"> Бренд </string>
    <string name="seasons"> Сезоны </string>
    <string name="season"> Сезон </string>
    <string name="status"> Статус </string>
    <string name="size"> Размер </string>
    <string name="tegi"> Теги </string>
    <string name="colors"> Цвета </string>
    <string name="notes"> Заметки </string>
    <string name="note"> Заметка </string>
    <string name="description"> Описание </string>
    <string name="hint"> Введите текст </string>
    <string name="gender"> Пол </string>
    <string name="add"> Добавить </string>
    <string name="addoutfit"> Создать комплект с вещью </string>
    <string name="delete"> Удалить </string>
    <string name="save"> Сохранить </string>
    <string name="home"> Главная </string>
    <string name="reset"> Сбросить </string>
    <string name="search"> Поиск </string>
    <string name="searchsubcategory"> Поиск по категориям </string>
    <string name="outfits"> Комплекты </string>
    <string name="help"> Справка </string>
    <string name="favoritedaytoplan"> Самый часто планируемый день: </string>
    <string name="totaldaysplanned"> Всего дней запланировано: </string>
    <string name="usuallyinsetofthings">  Обычно в комплекте вещей: </string>
    <string name="planneddaysinrow"> Запланировано дней подряд:</string>
    <string name="empty_plan_description">
    У вас нет запланированных комплектов на сегодня.
    Запланируйте свой день, чтобы повысить продуктивность!
    </string>
    <string name="wishlistcost">Стоимость списка желаний:</string>
    <string name="login">Вход</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="confirmpassword">Подтверждение пароля</string>
    <string name="withgoogle"> Продолжить с Google</string>
    <string name="registration">Регистрация</string>
    <string name="nameperson">Имя</string>
    <string name="accountphoto">Фото аккаунта</string>
    <string name="register">Зарегистрироваться</string>
    <string name="recoverpassword">Восстановить пароль</string>
    <string name="averagewishlistcost">Средняя сумма желаний:</string>
    <string name="mostexpensiveitem">Самая дорогая вещь:</string>
    <string name="mostсheapestitem">Самая дешевая вещь:</string>
    <string name="widget_label">Планирование на сегодня</string>
    <string name="widget_description">
        У вас нет запланированных комплектов на сегодня. Запланируйте свой день, чтобы повысить продуктивность!
    </string>
    <string name="default_web_client_id">380283333391-narke48afmigupb5q97mcfuh782mjc1k.apps.googleusercontent.com</string>
    <string name="sheet_schedule"> Запланировать комплект </string>
    <string name="sheet_schedule_more"> Запланировать ещё </string>
    <string name="hintsearch"> Поиск по названию вещи </string>
    <string name="edittags">  Редактирование тегов </string>
    <string name="filterclothing">  Фильтр вещей </string>
    <string name="importingdatabase">Импорт базы данных </string>
    <string name="filterwishlist">  Фильтр желанных \n вещей </string>
    <string name="filteroutfit">  Фильтр комплектов </string>
    <string name="clothingtagscount">  Вещей с тегом: 0</string>
</resources>