<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundpink"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/registration"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="-10dp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pinkstar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lledittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cl">

        <LinearLayout
            android:id="@+id/llimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountphoto"
                android:textColor="#000000"
                android:paddingBottom="3dp"
                android:textSize="20sp" />
            <ImageView
            android:id="@+id/imageAvatar"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add1"
            />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameperson"
                android:textColor="#000000"
                android:paddingBottom="3dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/entername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edittext_background"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:paddingBottom="3dp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/enteremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edittext_background"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:paddingBottom="3dp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:background="@drawable/edittext_background"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@android:color/transparent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:layout_marginBottom="3dp"
                    android:textSize="18sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvconfirnpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmpassword"
                android:paddingBottom="3dp"
                android:textColor="#000000"
                android:textSize="20sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilconfirnPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:errorEnabled="true"
                android:background="@drawable/edittext_background"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@android:color/transparent"
                >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etconfirnPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:hint="@string/confirmpassword"
                android:textSize="18sp"
                android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lledittext">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/darkpink"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonLoginwithgoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:gravity="center"
            android:text="@string/withgoogle"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="После регистрации на указанный e‑mail придёт письмо с ссылкой для подтверждения. Без подтверждения вы не сможете восстановить пароль."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>